fixing top margin on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -1732,7 +1732,7 @@ a:focus-visible {
 
 @media (max-width: 700px) {
   body {
-    padding: 8.5rem 4vw 4rem;
+    padding: 5.5rem 4vw 4rem;
   }
 
   .site-header {
